syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

message CGShareInfoProto {
  optional int32 msgType = 1[default = 8001];//协议号
}